[GR-16484] Build the Source with a TruffleFile for better instrumentation
* Do not read the file at all if it is a C extension .su file.